Upgrade to Spring Boot 3.4.1 and Java 21 with MapStruct and Flyway integration
Major framework upgrades and architectural improvements:
- Spring Boot 3.2.0 → 3.4.1, Java 17 → 21
- Integrated MapStruct for type-safe DTO-entity mapping
- Added Flyway for version-controlled database migrations
- Refactored all services to use MapStruct mappers
- Enhanced CORS configuration with externalized origins
- Changed JPA ddl-auto from 'update' to 'validate' (Flyway now manages schema)

This reduces boilerplate code and improves maintainability through centralized mapping logic and database version control.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>